--- a/style.css
+++ b/style.css
@@ -1,11 +1,23 @@
 :root {
   font-family: system-ui;
-  line-height: 1.5;
-  font-weight: 400;
+  --hue: 30;
+  --background: var(--hue) 36% 90%;
+  --dark: var(--hue) 15% 20%;
+  --light: var(--hue) 90% 90%;
+  --highlights: var(--hue) 100% 34%;
+  --links: var(--hue) 53% 33%;
 
+  --fs-title: 2rem;
+  --fs-nav: clamp(1.1rem, 1.2rem, 1.3rem);
+  --fs-contact: 1rem;
+  --fs-digit: clamp(3rem, 10vw + 1rem, 7rem);
+  --fs-heading: clamp(1.4rem, 5vw + 1rem, 3rem);
+  --fs-content: clamp(1rem, 1.1rem, 1.2rem);
+ 
   color-scheme: light;
-  color: #3a1e1c;
-  background-color: #f7e4e4;
+  color: var(--dark);
+  background-color: hsl(var(--background));
+  font-size: var(--fs-content);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,12 +27,12 @@
 
 a {
   font-weight: 500;
-  color: #812828;
+  color: hsl(var(--links));
   text-decoration: underline;
-  font-size: 1.2rem;
 }
+
 a:hover {
-  color: #ac5252;
+  color: hsl(var(--highlights));
 }
 a:active {
   font-weight: bold;
@@ -30,38 +42,65 @@ a:active {
 body {
   margin: 0;
   display: flex;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 .grid {
   display: grid;
-  text-align: center;
-  margin: 0 auto;
-  grid-template-rows: 20% 80%;
+  grid-template-columns: .25em 1fr .25em;
+  grid-template-areas: 
+    ". header ."
+    ". nav ."
+    ". bulletpoint ."
+    ". content ."; 
   grid-gap: 1rem;
-  grid-template-columns: 70% 30%;
-  width: 97%;
 }
 
 header {
-  grid-row: 1;
-  grid-column: 1;
+  grid-area: header;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  text-align: center;
   justify-content: baseline;
 }
 
+.contact {
+  font-size: var(--fs-contact);
+
+}
+
 nav {
+  grid-area: nav;
   display: flex;
-  place-items: center;
-  width: 100%;
+  flex-wrap: wrap;
+  align-items: center;
+  font-size: var(--fs-nav);
+  justify-content: center;
+}
+
+@media only screen and (min-width: 1260px) {
+  .grid {
+    grid-template-columns: 1.5em 1fr 1fr 1.5em;
+    grid-template-rows: min-content min-content auto;
+    grid-template-areas: 
+      ". header nav ."
+      ". bulletpoint bulletpoint ."
+      ". content content ."; 
+  }
+
+  header {
+    justify-content: space-between;
+    text-align: left;
+
+  }
+
+  nav {
+    justify-content: flex-end;
+  }
 }
 
 nav a {
   text-transform: uppercase;
-  padding: 1rem;
+  padding: .2rem .5rem .2rem .5rem;
 }
 
 .current-route {
@@ -70,21 +109,18 @@ nav a {
 }
 
 h1 {
-  font-size: 2em;
+  font-size: var(--fs-title);
 }
 
 .bulletpoint {
-  grid-row: 2;
-  grid-column: 2;
+  grid-area: bulletpoint;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
   text-align: right;
 }
 
 .heading {
-  font-size: 4rem;
-  line-height: 1;
+  font-size: var(--fs-heading);
   text-transform: uppercase;
   word-wrap: break-word;
   transform: translateX(100%);
@@ -96,30 +132,29 @@ h1 {
 }
 
 .digit {
-  font-size: 7rem;
+  font-size: var(--fs-digit);
   font-weight: bold;
-  color:#f7e4e4;
+  color: hsl(var(--light));
   width: 0px;
-  background-color: #af0000;
+  background-color: hsl(var(--highlights));
   transition: width 1s ease-in-out;
 }
 
 .slide-in-digit {
-  width: 100%;
-  padding-right: 1rem;
+  width: 98%;
+  padding-right: 2%;
 }
 
 .content {
-  grid-row: 2;
-  grid-column: 1;
-  font-size: 1.25rem;
-  max-height: 70vh;
+  grid-area: content;
+  font-size: var(--fs-content);
   overflow-y: scroll;
-  text-align: left;
+  text-align: justify;
   transform: translateX(-150%);
   display: flex;
+  flex-shrink: 1;
   flex-direction: column;
-  align-items: center;
+  place-items: flex-start;
 }
 
 .slide-in-left {
@@ -128,8 +163,16 @@ h1 {
 }
 
 img {
-  width: 50%;
-  height: 75%;
+  width: 95%;
+  height: 40%;
   object-position: center;
   object-fit: cover;
+  align-self: center;
+}
+
+@media only screen and (min-width: 1260px) {
+  img {
+    width: 60%;
+    height: 75%;
+  }
 }
