--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body {
 
 .grid {
   display: grid;
+  width: 100%;
   grid-template-columns: .25em 1fr .25em;
   grid-template-areas: 
     ". header ."
